--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -9,7 +9,7 @@
 {% for post in allMyPosts %}
     <h2>{{ post.title}}</h2>
     <p>{{ post.content }}</p>
-    <a href="">Voir plus </a>
+    <a href="{{path('app_details', {slug:post.slug} )}}">Voir plus </a>
 {% endfor %}
 </div>
 {% endblock %}
