--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,17 +24,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_home')}}">Home</a>
                         </li>
+                        {# categories correspond à la var global twig qui récupère le repo de categ  #}
+                        {# getCategories() est la méthode défini dans le repo de categories pour récup toutes les categs #}
+                        {% for categ in categories.getCategories()%}
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="{{ path('category_post', {id:categ.id})}}">{{ categ.title}}</a>
                         </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
+                        {% endfor %}
+                
                     </ul>
                     </div>
                 </div>
